--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -70,3 +74,9 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.nav-item-active {
+  transition: all 0.3s ease;
+  transform: translateY(-2px);
+}
+
