--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,25 @@
   scroll-behavior: smooth;
 }
 
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1e293b; /* Dark Blue Background */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, indigo, #4f46e5); /* Gradient Thumb */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #4f46e5, #2563eb);
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
